# 0.9.3 (2017-05-17)

* zmiana definicji zmiennych if_e_n, if_e_s, if_p_n, if_p_s, if_s_n, if_s_s

# 0.9.2 (2017-04-27)

* zaktualizowane dane GUS
* dodane zmienne DATA_OD_E i DATA_OD_ES
* zmodyfikowany sposób przygotowywania słownika kierunków
  (stary słownik mapowania kierunków na obszary/dziedziny/dyscypliny
  został usunięty jako nieaktualny i zawierający błędy)

# 0.9.1 (2017-04-13)

* zmiany w sposobie przygotowania danych o kierunkach
  (specyficzne dla zrzutu danych z 2017 roku)

# 0.9.0 (2017-04-01)

* wprowadzenie liniowej interpolacji danych o zarobkach z poziomu roku do
  poziomu miesięcy (funkcje przygotuj_pna_powiaty_mb() oraz
  przygotuj_powiaty())

# 0.8.1 (2017-03-10)

* korekta literówek data_od~data_do

# 0.8.0 (2017-01-30)

* wprowadzenie ugólnionej koncepcji okienka czasu definiowanego za pomocą
  funkcji okienko(); wymuszona tym faktem zmiana parametrów funkcji
  oblicz_okienko()
* wprowadzenie możliwości obliczania okresów krokami (w celu zmniejszenia
  zużycia pamięci) - funkcja krok_zdau()
* zmiana nazw zmiennych określających początek i koniec sudiowania na
  "data_od" i "data_do" (konwencji przyjętej w MLD)
* zaktualizowana baza kodów pocztowych, ich mapowania na powiaty oraz danych
  GUS o powiatach
* dodanie weryfikacji kodów pocztowych w funkcji polacz_zus()
* wprowadzenie lepszego wspomagania dla cache-owania wyników pośrednich
  - funkcja nazwa_pliku() i przepisana winietka Generowanie_danych.R
# 0.7.2 (2016-11-14)

* wyznaczając zmienną if_x_s bierzemy pod uwagę składkę za bycie bezrobotnym
  (jeśli jest bezrobotny, to nie może być w danym okresie studentem)

# 0.7.1 (2016-11-11)

* dodane nowe zmienne
* ujednolicenie nazw zmiennych opisujących studiowanie (sufiks "_st" implikuje
  bycie stała, dla zmiennych okienkowych przy dowolnej kategorii zatrudnienia
  sufiks "_x_s")
* korekta wyliczania zmiennych "if_x_s" oraz "if_x_strprg" (dawniej "if_st" i
  "if_stprg"), które muszą być wyliczane na poziomie {id, okres}, a nie, jak do