@@ -15,6 +15,7 @@ Imports:
     reshape2
 Suggests:
     testthat,
-    multidplyr
+    multidplyr,
+    haven
 Encoding: UTF-8
 RoxygenNote: 6.0.1
