@@ -12,28 +12,28 @@ oblicz_zmienne_pochodne = function(dane, multidplyr = TRUE){
 
   dane = dane %>%
     mutate_(
-      nm_bd = ~nm_bd_n + nm_bd_s,
-      nm_d  = ~nm_d_n + nm_d_s,
-      nm_e  = ~nm_e_n + nm_e_s,
-      nm_i  = ~nm_i_n + nm_i_s,
-      nm_j  = ~nm_j_n + nm_j_s,
-      nm_m  = ~nm_m_n + nm_m_s,
-      nm_n  = ~nm_n_n + nm_n_s,
-      nm_p  = ~nm_p_n + nm_p_s,
-      nm_s  = ~nm_s_n + nm_s_s,
-      nm_z  = ~nm_z_n + nm_z_s,
+      nm_bd = ~dplyr::coalesce(nm_bd_n, 0L) + dplyr::coalesce(nm_bd_s, 0L),
+      nm_d  = ~dplyr::coalesce(nm_d_n, 0L) + dplyr::coalesce(nm_d_s, 0L),
+      nm_e  = ~dplyr::coalesce(nm_e_n, 0L) + dplyr::coalesce(nm_e_s, 0L),
+      nm_i  = ~dplyr::coalesce(nm_i_n, 0L) + dplyr::coalesce(nm_i_s, 0L),
+      nm_j  = ~dplyr::coalesce(nm_j_n, 0L) + dplyr::coalesce(nm_j_s, 0L),
+      nm_m  = ~dplyr::coalesce(nm_m_n, 0L) + dplyr::coalesce(nm_m_s, 0L),
+      nm_n  = ~dplyr::coalesce(nm_n_n, 0L) + dplyr::coalesce(nm_n_s, 0L),
+      nm_p  = ~dplyr::coalesce(nm_p_n, 0L) + dplyr::coalesce(nm_p_s, 0L),
+      nm_s  = ~dplyr::coalesce(nm_s_n, 0L) + dplyr::coalesce(nm_s_s, 0L),
+      nm_z  = ~dplyr::coalesce(nm_z_n, 0L) + dplyr::coalesce(nm_z_s, 0L),
       if_b   = ~as.integer(nm_b > 0L),
       if_b2  = ~as.integer(nm_b2 > 0L),
       if_e   = ~as.integer(nm_e > 0L),
-      if_e_n = ~ifelse(nm_x_n > 0, as.integer(nm_e_n > 0L), NA_integer_),
-      if_e_s = ~ifelse(nm_x_s > 0, as.integer(nm_e_s > 0L), NA_integer_),
+      if_e_n = ~as.integer(nm_e_n > 0L),
+      if_e_s = ~as.integer(nm_e_s > 0L),
       if_m   = ~as.integer(nm_m > 0L),
       if_p   = ~as.integer(nm_p > 0L),
-      if_p_n = ~ifelse(nm_x_n > 0, as.integer(nm_p_n > 0L), NA_integer_),
-      if_p_s = ~ifelse(nm_x_s > 0, as.integer(nm_p_s > 0L), NA_integer_),
+      if_p_n = ~as.integer(nm_p_n > 0L),
+      if_p_s = ~as.integer(nm_p_s > 0L),
       if_s   = ~as.integer(nm_s > 0L),
-      if_s_n = ~ifelse(nm_x_n > 0, as.integer(nm_s_n > 0L), NA_integer_),
-      if_s_s = ~ifelse(nm_x_s > 0, as.integer(nm_s_s > 0L), NA_integer_),
+      if_s_n = ~as.integer(nm_s_n > 0L),
+      if_s_s = ~as.integer(nm_s_s > 0L),
       if_x_s = ~as.integer(nm_x_s > 0L),
       if_x_n = ~as.integer(nm_x_n > 0L),
       epm_e   = ~dplyr::coalesce(npm_e / nm_e, NA_real_),
@@ -43,36 +43,36 @@ oblicz_zmienne_pochodne = function(dane, multidplyr = TRUE){
       pm_b2   = ~dplyr::coalesce(100L * nm_b2 / len, NA_real_),
       pm_b_n  = ~dplyr::coalesce(100L * nm_b / nm_x_n, NA_real_),
       pm_bd   = ~dplyr::coalesce(100L * nm_bd / len, NA_real_),
-      pm_bd_n = ~dplyr::coalesce(100L * nm_bd_n / len, NA_real_),
-      pm_bd_s = ~dplyr::coalesce(100L * nm_bd_s / len, NA_real_),
+      pm_bd_n = ~dplyr::coalesce(100L * nm_bd_n / nm_n, NA_real_),
+      pm_bd_s = ~dplyr::coalesce(100L * nm_bd_s / nm_s, NA_real_),
       pm_be   = ~dplyr::coalesce((len - nm_e) / len, NA_real_),
       pm_bp   = ~dplyr::coalesce((len - nm_p) / len, NA_real_),
       pm_d    = ~dplyr::coalesce(100L * nm_d / len, NA_real_),
-      pm_d_n  = ~dplyr::coalesce(100L * nm_d_n / len, NA_real_),
-      pm_d_s  = ~dplyr::coalesce(100L * nm_d_s / len, NA_real_),
+      pm_d_n  = ~dplyr::coalesce(100L * nm_d_n / nm_n, NA_real_),
+      pm_d_s  = ~dplyr::coalesce(100L * nm_d_s / nm_s, NA_real_),
       pm_e    = ~dplyr::coalesce(100L * nm_e / len, NA_real_),
-      pm_e_n  = ~dplyr::coalesce(100L * nm_e_n / len, NA_real_),
-      pm_e_s  = ~dplyr::coalesce(100L * nm_e_s / len, NA_real_),
+      pm_e_n  = ~dplyr::coalesce(100L * nm_e_n / nm_n, NA_real_),
+      pm_e_s  = ~dplyr::coalesce(100L * nm_e_s / nm_s, NA_real_),
       pm_i    = ~dplyr::coalesce(100L * nm_i / len, NA_real_),
-      pm_i_n  = ~dplyr::coalesce(100L * nm_i_n / len, NA_real_),
-      pm_i_s  = ~dplyr::coalesce(100L * nm_i_s / len, NA_real_),
+      pm_i_n  = ~dplyr::coalesce(100L * nm_i_n / nm_n, NA_real_),
+      pm_i_s  = ~dplyr::coalesce(100L * nm_i_s / nm_s, NA_real_),
       pm_n    = ~dplyr::coalesce(100L * nm_n / len, NA_real_),
-      pm_n_n  = ~dplyr::coalesce(100L * nm_n_n / len, NA_real_),
-      pm_n_s  = ~dplyr::coalesce(100L * nm_n_s / len, NA_real_),
+      pm_n_n  = ~dplyr::coalesce(100L * nm_n_n / nm_n, NA_real_),
+      pm_n_s  = ~dplyr::coalesce(100L * nm_n_s / nm_s, NA_real_),
       pm_p    = ~dplyr::coalesce(100L * nm_p / len, NA_real_),
-      pm_p_n  = ~dplyr::coalesce(100L * nm_p_n / len, NA_real_),
-      pm_p_s  = ~dplyr::coalesce(100L * nm_p_s / len, NA_real_),
+      pm_p_n  = ~dplyr::coalesce(100L * nm_p_n / nm_n, NA_real_),
+      pm_p_s  = ~dplyr::coalesce(100L * nm_p_s / nm_s, NA_real_),
       pm_s    = ~dplyr::coalesce(100L * nm_s / len, NA_real_),
-      pm_s_n  = ~dplyr::coalesce(100L * nm_s_n / len, NA_real_),
-      pm_s_s  = ~dplyr::coalesce(100L * nm_s_s / len, NA_real_),
-      pm_x_n  = ~dplyr::coalesce(100L * nm_x_n / len, NA_real_),
-      pm_x_s  = ~dplyr::coalesce(100L * nm_x_s / len, NA_real_),
-      sz_e = ~sz_e_n + sz_e_s,
-      sz_n = ~sz_n_n + sz_n_s,
-      sz_p = ~sz_p_n + sz_p_s,
-      sz_s = ~sz_s_n + sz_s_s,
-      sz_x = ~sz_x_n + sz_x_s,
-      sz_z = ~sz_z_n + sz_z_s,
+      pm_s_n  = ~dplyr::coalesce(100L * nm_s_n / nm_n, NA_real_),
+      pm_s_s  = ~dplyr::coalesce(100L * nm_s_s / nm_s, NA_real_),
+      pm_x_n  = ~dplyr::coalesce(100L * nm_x_n / nm_n, NA_real_),
+      pm_x_s  = ~dplyr::coalesce(100L * nm_x_s / nm_s, NA_real_),
+      sz_e = ~dplyr::coalesce(sz_e_n, 0) + dplyr::coalesce(sz_e_s, 0),
+      sz_n = ~dplyr::coalesce(sz_n_n, 0) + dplyr::coalesce(sz_n_s, 0),
+      sz_p = ~dplyr::coalesce(sz_p_n, 0) + dplyr::coalesce(sz_p_s, 0),
+      sz_s = ~dplyr::coalesce(sz_s_n, 0) + dplyr::coalesce(sz_s_s, 0),
+      sz_x = ~dplyr::coalesce(sz_x_n, 0) + dplyr::coalesce(sz_x_s, 0),
+      sz_z = ~dplyr::coalesce(sz_z_n, 0) + dplyr::coalesce(sz_z_s, 0),
       ez_e   = ~dplyr::coalesce(sz_e / nm_e, NA_real_),
       ez_e_n = ~dplyr::coalesce(sz_e_n / nm_e_n, NA_real_),
       ez_e_s = ~dplyr::coalesce(sz_e_s / nm_e_s, NA_real_),
